[package]
name = "filter-lines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
eyre = "0.6.8"
serde = { version = "1.0.137", features = ["serde_derive"] }
serde_json = "1.0.81"
unicode-blocks = "0.1.4"
